[package]
name = "lalr1_plus"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.3.0"

lexan = { git = "https://github.com/pwil3058/rs_lexan.git" }
