[package]
name = "lap_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
clap = "2"
regex = "1"
structopt = "0.3"

lexan = { path = "../lexan" }
lalr1 = { path = "../lalr1" }
