[package]
name = "calc_no_er"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.3.0"

lexan = { path = "../../lexan" }
lalr1_plus = { path = "../../lalr1_plus" }
